third_party/crashpad/crashpad/util/file/filesystem_posix.cc
@@ -22,8 +22,28 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <unistd.h>
 
 #include "base/logging.h"
+#include "build/build_config.h"
 
 namespace crashpad {
+
+bool FileModificationTime(const base::FilePath& path, timespec* mtime) {
+  struct stat st;
+  if (lstat(path.value().c_str(), &st) != 0) {
+    PLOG(ERROR) << "lstat " << path.value();
+    return false;
+  }
+
+#if defined(OS_MACOSX)
+  *mtime = st.st_mtimespec;
+#elif defined(OS_ANDROID)
+  // This is needed to compile with traditional NDK headers.
+  mtime->tv_sec = st.st_mtime;
+  mtime->tv_nsec = st.st_mtime_nsec;
+#else
+  *mtime = st.st_mtim;
+#endif
+  return true;
+}
 
 bool LoggingCreateDirectory(const base::FilePath& path,
                             FilePermissions permissions,
