third_party/crashpad/crashpad/util/win/session_end_watcher.cc
@@ -17,6 +17,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/logging.h"
 #include "base/scoped_generic.h"
+#include "util/win/scoped_set_event.h"
 
 extern "C" {
 extern IMAGE_DOS_HEADER __ImageBase;
@@ -25,21 +26,6 @@ extern IMAGE_DOS_HEADER __ImageBase;
 namespace crashpad {
 
 namespace {
-
-class ScopedSetEvent {
- public:
-  explicit ScopedSetEvent(HANDLE event) : event_(event) {}
-  ~ScopedSetEvent() {
-    if (!SetEvent(event_)) {
-      PLOG(ERROR) << "SetEvent";
-    }
-  }
-
- private:
-  HANDLE event_;
-
-  DISALLOW_COPY_AND_ASSIGN(ScopedSetEvent);
-};
 
 // ScopedWindowClass and ScopedWindow operate on ATOM* and HWND*, respectively,
 // instead of ATOM and HWND, so that the actual storage can exist as a local
