third_party/crashpad/crashpad/util/util.gyp
@@ -258,6 +258,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
         'win/scoped_local_alloc.h',
         'win/scoped_process_suspend.cc',
         'win/scoped_process_suspend.h',
+        'win/scoped_set_event.cc',
+        'win/scoped_set_event.h',
         'win/session_end_watcher.cc',
         'win/session_end_watcher.h',
         'win/termination_codes.h',
